# password-complicator

./: .gitignore  README.rst  pyproject.toml
.github/workflows/: release.yaml  test.yaml
password_complicator/: __init__.py  __main__.py  password_complicator.py
tests/: test_obfuscate.py
