[project]
name = "password_complicator"
authors = [
    {name = "Jacky Chen", email = "jacky9813@hotmail.com"},
]
description = "Instead of sending easy to guess password, why not just make it more complicated with hashing?"
requires-python = ">=3.8"
license = {text = "MIT License"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
readme = "README.rst"
dependencies = []
dynamic = ["version"]

[tool.setuptools_scm]

[project.optional-dependencies]
dev = [
    "coverage       >= 7.2.7",
    "build          >= 0.10.0",
    "setuptools     >= 65.5.0",
    "setuptools-scm >= 7.1.0"
]

[project.scripts]
pc = "password_complicator.__main__:main"

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"
